--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -342,5 +342,7 @@
     <string name="external_fx_warning">(Дезактивация может занять некоторое время)</string>
     <string name="playback_engine">Воспроизведение двигателя (необходимо перезапустить проигрыватель для того, чтобы изменения вступили в силу):</string>
     <string name="recommended">рекомендуемые</string>
+    <string name="resample_track_to_native">Изменение частоты дискретизации песен на исходную частоту дискретизации устройства</string>
+    <string name="performance">Представление</string>
 
 </resources>
