Added an option to make the "Previous" button seek to the beginning of the song before actually skipping to the previous song

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -344,5 +344,6 @@
     <string name="recommended">empfohlen</string>
     <string name="resample_track_to_native">Verändern der Abtastfrequenz der Lieder auf die native Abtastfrequenz der Vorrichtung</string>
     <string name="performance">Leistung</string>
+    <string name="previous_resets_after_the_beginning">Schaltfläche \"Zurück\" kehrt zum Anfang des Songs, bevor er springt zum vorherigen Titel</string>
 
 </resources>
