--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -345,5 +345,6 @@
     <string name="resample_track_to_native">Изменение частоты дискретизации песен на исходную частоту дискретизации устройства</string>
     <string name="performance">Представление</string>
     <string name="previous_resets_after_the_beginning">Кнопка \"Предыдущая\" возвращается к началу песни, прежде чем она переходит к предыдущему трек</string>
+    <string name="larger_text_size">Увеличить размер шрифта</string>
 
 </resources>
