--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -346,5 +346,8 @@
     <string name="performance">Performance</string>
     <string name="previous_resets_after_the_beginning">Bouton \"Précédent\" retourne au début de la chanson avant de sauter à la piste précédente</string>
     <string name="larger_text_size">Agrandir la taille du texte</string>
+    <string name="ringtone">Sonnerie d\'appel</string>
+    <string name="ringtone_error">Les sonneries d\'appel doivent être des chansons au format MP3 :(</string>
+    <string name="success">Succès :)</string>
 
 </resources>
