--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -349,5 +349,6 @@
     <string name="ringtone">Anruf Klingelton</string>
     <string name="ringtone_error">Klingeltöne müssen Songs im MP3-Format sein :(</string>
     <string name="success">Erfolg :)</string>
+    <string name="display_song_number_and_count">Anzeige von Song-Nummer und Song-Zählung</string>
 
 </resources>
