--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -350,5 +350,7 @@
     <string name="ringtone_error">Los tonos deben ser canciones en formato MP3 :(</string>
     <string name="success">Éxito :)</string>
     <string name="display_song_number_and_count">Mostrar el número de la canción y la cantidad de canciones</string>
+    <string name="show_album_art">Mostrar carátula del álbum</string>
+    <string name="hide_album_art">Ocultar carátula del álbum</string>
 
 </resources>
