--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -350,5 +350,7 @@
     <string name="ringtone_error">Вызов мелодии должны быть песни в формате MP3 :(</string>
     <string name="success">Успех :)</string>
     <string name="display_song_number_and_count">Дисплей номер песни и количество песен</string>
+    <string name="show_album_art">Показать обложку альбома</string>
+    <string name="hide_album_art">Скрыть обложки альбома</string>
 
 </resources>
