--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -352,5 +352,7 @@
     <string name="ringtone_error">Ringtones must be songs in MP3 format :(</string>
     <string name="success">Success :)</string>
     <string name="display_song_number_and_count">Display song number and count</string>
+    <string name="show_album_art">Show album art</string>
+    <string name="hide_album_art">Hide album art</string>
 
 </resources>
