--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -350,5 +350,7 @@
     <string name="ringtone_error">Виклик мелодії повинні бути пісні в форматі MP3 :(</string>
     <string name="success">Успіх :)</string>
     <string name="display_song_number_and_count">Дисплей номер пісні і кількість пісень</string>
+    <string name="show_album_art">Показати обкладинку альбому</string>
+    <string name="hide_album_art">Приховати обкладинки альбому</string>
 
 </resources>
