--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -355,5 +355,6 @@
     <string name="show_album_art">Show album art</string>
     <string name="hide_album_art">Hide album art</string>
     <string name="icy">Icy</string>
+    <string name="allow_lock_screen">Allow the app to stay above the lock screen</string>
 
 </resources>
