--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -353,5 +353,6 @@
     <string name="show_album_art">Afficher l\'art de l\'album</string>
     <string name="hide_album_art">Masquer l\'art de l\'album</string>
     <string name="icy">Glacé</string>
+    <string name="allow_lock_screen">Autoriser l\'application à rester au-dessus de l\'écran de verrouillage</string>
 
 </resources>
