--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -353,5 +353,6 @@
     <string name="show_album_art">Показати обкладинку альбому</string>
     <string name="hide_album_art">Приховати обкладинки альбому</string>
     <string name="icy">Льодовий</string>
+    <string name="allow_lock_screen">Дозволити додатку залишатися над екраном блокування</string>
 
 </resources>
