Added a new "Share" feature

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -354,5 +354,6 @@
     <string name="hide_album_art">Ausblenden Album-Art</string>
     <string name="icy">Eisig</string>
     <string name="allow_lock_screen">Lassen Sie die App über dem Sperrbildschirm stehen</string>
+    <string name="share">Aktie</string>
 
 </resources>
