--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -354,5 +354,6 @@
     <string name="hide_album_art">Ocultar arte do álbum</string>
     <string name="icy">Glacial</string>
     <string name="allow_lock_screen">Permitir que o aplicativo fique acima da tela de bloqueio</string>
+    <string name="share">Compartilhar</string>
 
 </resources>
