--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -355,6 +355,6 @@
     <string name="icy">Glacial</string>
     <string name="allow_lock_screen">Permitir que o aplicativo fique acima da tela de bloqueio</string>
     <string name="share">Compartilhar</string>
-    <string name="file_prefetch_size">Bytes para armazenar na memória ao reproduzir arquivos:</string>
+    <string name="file_prefetch_size">Bytes para armazenar na memória ao reproduzir arquivos locais:</string>
 
 </resources>
