--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -355,6 +355,6 @@
     <string name="icy">Ледяной</string>
     <string name="allow_lock_screen">Разрешить приложению оставаться выше экрана блокировки</string>
     <string name="share">Поделиться</string>
-    <string name="file_prefetch_size">Байты для хранения в памяти при воспроизведении файлов:</string>
+    <string name="file_prefetch_size">Байты для хранения в памяти при воспроизведении локальных файлов:</string>
 
 </resources>
